<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/secondary"
    tools:context="edu.vassar.litlore.view.LoginFragment">

    <TextView
        android:id="@+id/LoginTitle"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginVertical="25dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />


    <EditText
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="Email"
        android:ems="12"
        android:background="@drawable/search_input_border"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:ems="12"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="@drawable/search_input_border"
        android:hint="@string/password" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:text="@string/login"
        android:background="@drawable/general_button" />


</LinearLayout>