<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <!-- Profile placeholder -->
    <ImageView
        android:id="@+id/ivUserAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profile_picture"
        android:contentDescription="@string/profile_pic_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Username -->
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username_item"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/ivUserAvatar"
        app:layout_constraintTop_toTopOf="@id/ivUserAvatar"
        app:layout_constraintBottom_toBottomOf="@id/ivUserAvatar"
        app:layout_constraintEnd_toStartOf="@+id/btnFollow"/>

    <!-- Follow/Unfollow button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFollow"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/follow"
        app:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/ivUserAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivUserAvatar"
        app:strokeColor="@color/main"
        app:strokeWidth="1dp"
        app:useMaterialThemeColors="false" />
</androidx.constraintlayout.widget.ConstraintLayout>