<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <EditText
            android:id="@+id/search_input"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:autofillHints=""
            android:background="@drawable/search_input_border"
            android:hint="@string/search_user_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="15sp" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:background="@drawable/bg_search_button"
            android:padding="8dp"
            android:src="@drawable/search_icon"
            android:contentDescription="@string/search_button_text"
            android:elevation="4dp" />
    </LinearLayout>


    <!-- RecyclerView for displaying search results -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_users_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/search_section"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>