<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/nav_home"
        android:title=""
        android:contentDescription="@string/home_button" />
    <item
        android:id="@+id/nav_saved_books"
        android:icon="@drawable/nav_saved_books"
        android:title=""
        android:contentDescription="@string/saved_books_button" />
    <item
        android:id="@+id/search_users"
        android:icon="@drawable/search_user"
        android:title=""
        android:contentDescription="@string/search_users_button" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/nav_profile"
        android:title=""
        android:contentDescription="@string/profile_button" />
</menu>